<resources>
    <string name="app_name">MessageApp</string>
    <string name="mainPageTitle">Message App</string>
    <string name="chatRoomOne">Chat One</string>
    <string name="chatRoomTwo">Chat Two</string>
    <string name="chatRoomThree">Chat Three</string>
    <string name="chatRoomTitle">Chat Room</string>
    <string name="addMessageText">Add Message</string>
    <string name="sendMessageBtn">Send</string>
    <string name="contentDescriptCamera">Goes To Camera</string>
    <string name="splashScreenText">Welcome to the App</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="signOutBtn">Sign Out</string>
    <string name="chatRoomTitleTwo">Chat Room Two</string>
    <string name="chatRoomTitleThree">Chat Room Three</string>
    <string name="messageOutputTitle">Messages Output</string>
    <string name="senderName">Curtis</string>
    <string name="messageText">Hello Friends</string>
    <string name="timeStamp">9:15pm</string>
    <string name="default_image">Default Image</string>
    <string name="camera_photo">Camera Photo</string>
    <string name="splashScreenDescript">Strawberry Logo</string>
</resources>
