<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.message.messageapp.FirstChatActivity">

    <TextView
        android:id="@+id/chatRoomTitleOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/chatRoomTitle"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"
        android:layout_below="@id/chatRoomTitleOne"
        android:id="@+id/messageRec">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:id="@+id/linearLayout">

        <EditText
            android:id="@+id/addMessageOne"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:hint="@string/addMessageText" />

        <Button
            android:id="@+id/sendMessageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendMessageBtn"
            android:textSize="24sp"
            android:textStyle="bold"
            android:onClick="sendButtonClicked"/>

        <ImageButton
            android:id="@+id/goToCameraBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contentDescriptCamera"
            app:srcCompat="@drawable/camera_image" />
    </LinearLayout>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="40dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:id="@+id/imageView"
        android:contentDescription="@string/camera_photo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/imageView"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/default_image"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/chooseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView"
        android:layout_toLeftOf="@+id/chatRoomTitleOne"
        android:layout_toStartOf="@+id/chatRoomTitleOne"
        android:src="@android:drawable/ic_input_add" />


</RelativeLayout>
