<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="100dp"
    android:layout_margin="10dp"
    android:background="@drawable/message_shape"
    android:orientation="vertical">

    <TextView
        android:id="@+id/usernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:padding="5dp"
        android:text="@string/senderName"
        android:textColor="#536DFE"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/messageText"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="10dp"
        android:text="@string/messageText"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="10dp"
        android:text="@string/timeStamp"
        android:textColor="#000000" />

</LinearLayout>