<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.message.messageapp.Main4Activity">

    <TextView
        android:id="@+id/chatRoomTitleThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/chatRoomTitleThree"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayoutThree"
        android:layout_below="@id/chatRoomTitleThree"
        android:id="@+id/messageRecThree">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayoutThree">

        <EditText
            android:id="@+id/addMessageThree"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:hint="@string/addMessageText" />

        <Button
            android:id="@+id/sendMessageBtnThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendMessageBtn"
            android:textSize="24sp"
            android:textStyle="bold"
            android:onClick="sendButtonClicked"/>

        <ImageButton
            android:id="@+id/goToCameraBtnThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/addMessageThree"
            android:layout_below="@+id/addMessageThree"
            android:layout_toEndOf="@+id/sendMessageBtnThree"
            android:layout_toRightOf="@+id/sendMessageBtnThree"
            android:contentDescription="@string/contentDescriptCamera"
            app:srcCompat="@drawable/camera_image" />
    </LinearLayout>





</RelativeLayout>
