<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.message.messageapp.MainActivity">

    <TextView
        android:id="@+id/mainPageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:text="@string/mainPageTitle"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/mainPageText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:id="@+id/cardView">


        <Button
            android:id="@+id/chatButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/chatRoomOne"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cardView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp">

        <Button
            android:id="@+id/chatButtonTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/chatRoomTwo"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cardViewTwo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp">


        <Button
            android:id="@+id/chatButtonThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/chatRoomThree"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/signOutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cardViewThree"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/signOutBtn"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>
